tests/NormalTests/paczka2/big_fuzzy/48800102.err
Error in line 1: a6D S258 69,3
Error in line 9: 9gbA S768 83,9
Error in line 13: 9gbA S425 32,2
Error in line 10: S768 A199 27,3
Error in line 15: oAh1h0LTWQ S258 36,3
Error in line 16: 9gbA A199 3,5
Error in line 25: rHCgIPuCE S768 31,6
Error in line 27: rHCgIPuCE S425 81,0
Error in line 45: S768 S768 93,6
Error in line 44: 9gbA S768 10,1
Error in line 50: a6D S258 75,9
Error in line 49: 9gbA S425 45,5
Error in line 43: 0UkY9wL S425 67,7
Error in line 61: S768 A199 -1,6
Error in line 66: oAh1h0LTWQ S258 101,25
Error in line 64: a6D S258 66,4
Error in line 65: oAh1h0LTWQ S258 22,3
Error in line 71: oAh1h0LTWQ S425 16,0
Error in line 80: rHCgIPuCE S768 37,52
Error in line 68: rHCgIPuCE S258 13,2
Error in line 92: S768 S258 84,5
Error in line 97: S768 A199 59,1
Error in line 111: 0UkY9wL A199 58,8
Error in line 118: 0UkY9wL S768 13,9
Error in line 109: S768 S258 254,3
Error in line 101: q2dqsg A199 56,8
Error in line 145: S768 S768 246,63
Error in line 144: 9gbA A199 9,2
Error in line 142: S768 S768 93,3
Error in line 151: S768 S258 77,5
Error in line 154: 0UkY9wL S258 38,8
Error in line 174: a6D S768 65,3
Error in line 172: q2dqsg S768 54,8
Error in line 181: 0UkY9wL A199 42,5
Error in line 176: a6D A199 96,0
Error in line 187: 0UkY9wL S425 92,4
Error in line 198: q2dqsg S425 -5,3
Error in line 200: a6D A199 37,2
Error in line 212: a6D S425 49,6
Error in line 233: a6D S768 46,8
Error in line 238: a6D S258 86,0
Error in line 235: 0UkY9wL S425 108,9
Error in line 245: 0UkY9wL A199 79,1
